# should-cost-calculator

./: .env.example  .gitignore  .npmrc  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/: dependabot.yml
.github/workflows/: deploy.yml
scripts/: build-data.mjs  copy-bundle-to-tauri.mjs  encrypt-data.mjs  migrate-bundle.mjs  seed-supabase.mjs
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/components/: AdminPanel.tsx  App.tsx  AsIsForm.tsx  CaseOneSimulator.tsx  CaseTwoComparison.tsx  DataImport.tsx  DeltaBadge.tsx  FoldableProcessCard.tsx  NctTable.tsx  PasswordChangeDialog.tsx  PasswordPrompt.tsx  PostCostPreview.tsx  PressPreview.tsx  ProcessRow.tsx  ProcessRowList.tsx  ResultsPanel.tsx  SectionFormula.tsx  TransportPreview.tsx  UnifiedForm.tsx
src/components/transport/: TransportLimitInputs.tsx  TransportLoadInputs.tsx  index.tsx  parts.tsx
src/data/: encrypted.json
src/lib/: applyMargin.ts  calc.ts  calcSheet.ts  crypto.ts  format.ts  lookup.ts  normalize.ts  parseMarkdown.ts  remoteBundle.ts  simulate.ts  storage.ts  tauriFs.ts
src/lib/__tests__/: calc.test.ts  calcSheet.test.ts  crypto.test.ts  remoteBundle.test.ts
src/state/: formReducer.ts
src/styles/: app.css
src/types/: domain.ts
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/save-bundle/: index.ts
supabase/migrations/: 0001_bundles.sql
