[package]
name = "should-cost-calculator"
version = "0.1.0"
description = "사내 판금 Should-Cost 계산기 (오프라인 .exe)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "should_cost_calculator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
